Added inputs to form

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <body>
     <div class="main">
       <form class="form">
+        <input name="name" class="input" type="text" placeholder="Name" minlength="20" required>
+        <input name="contributors" class="input" type="number" placeholder="Number of contributors" min="1" max="100" required>
+        <input name="max_branches" class="input" type="number" placeholder="Max branches" min="1" max="100" required>
         <!-- input go here -->
         <button class="button">Save</button>
       </form>
